[gd_scene load_steps=28 format=3 uid="uid://dv5r3vbbkw007"]

[ext_resource type="Script" path="res://scenes/1_cups.gd" id="1_ocp0k"]
[ext_resource type="Script" path="res://scenes/Health.gd" id="2_dswxv"]
[ext_resource type="Texture2D" uid="uid://by1wjpbc45rut" path="res://Characters/1_cups_attack.png" id="3_yxrmh"]
[ext_resource type="Texture2D" uid="uid://c2j3aaxshedm2" path="res://Characters/1cups_idle.png" id="4_kvwc1"]
[ext_resource type="Texture2D" uid="uid://fcp5ra0c1nay" path="res://Characters/1cups_jump.png" id="5_35re3"]
[ext_resource type="Texture2D" uid="uid://cn1380f5c0758" path="res://Characters/1cups_walking.png" id="6_qhmio"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nwvsf"]
size = Vector2(180, 226)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d5mx3"]
size = Vector2(1399, 87)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0u8j5"]
size = Vector2(116.5, 143.5)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7p7y"]
atlas = ExtResource("3_yxrmh")
region = Rect2(0, 0, 362, 260)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykmy8"]
atlas = ExtResource("3_yxrmh")
region = Rect2(362, 0, 362, 260)

[sub_resource type="AtlasTexture" id="AtlasTexture_wevq0"]
atlas = ExtResource("3_yxrmh")
region = Rect2(724, 0, 362, 260)

[sub_resource type="AtlasTexture" id="AtlasTexture_6obvr"]
atlas = ExtResource("3_yxrmh")
region = Rect2(1086, 0, 362, 260)

[sub_resource type="AtlasTexture" id="AtlasTexture_l600e"]
atlas = ExtResource("3_yxrmh")
region = Rect2(1448, 0, 362, 260)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxsl3"]
atlas = ExtResource("4_kvwc1")
region = Rect2(0, 0, 360, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_e356y"]
atlas = ExtResource("4_kvwc1")
region = Rect2(360, 0, 360, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_afaoh"]
atlas = ExtResource("4_kvwc1")
region = Rect2(720, 0, 360, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3vy6"]
atlas = ExtResource("4_kvwc1")
region = Rect2(1080, 0, 360, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7285"]
atlas = ExtResource("4_kvwc1")
region = Rect2(1440, 0, 360, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_jq3fn"]
atlas = ExtResource("5_35re3")
region = Rect2(0, 0, 360, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_yx5kb"]
atlas = ExtResource("6_qhmio")
region = Rect2(0, 0, 360, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_xug0d"]
atlas = ExtResource("6_qhmio")
region = Rect2(360, 0, 360, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ju76"]
atlas = ExtResource("6_qhmio")
region = Rect2(720, 0, 360, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_cpdpu"]
atlas = ExtResource("6_qhmio")
region = Rect2(1080, 0, 360, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0aij"]
atlas = ExtResource("6_qhmio")
region = Rect2(1440, 0, 360, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_v2k83"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7p7y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ykmy8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wevq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6obvr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l600e")
}],
"loop": true,
"name": &"attack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxsl3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e356y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afaoh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3vy6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7285")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jq3fn")
}],
"loop": true,
"name": &"jumping",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yx5kb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xug0d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ju76")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cpdpu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0aij")
}],
"loop": true,
"name": &"walking",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ce5v6"]
size = Vector2(116.5, 20)

[node name="Enemy" type="CharacterBody2D" groups=["Global", "Hit", "enemy_dmg", "player"]]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_ocp0k")

[node name="Health" type="Label" parent="."]
offset_left = -98.0
offset_top = -476.0
offset_right = 222.0
offset_bottom = -394.0
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1
script = ExtResource("2_dswxv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(63, -275)
shape = SubResource("RectangleShape2D_nwvsf")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(126.5, -202)
shape = SubResource("RectangleShape2D_d5mx3")

[node name="character" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="character"]
collision_layer = 130
collision_mask = 0

[node name="CollisionShape2D_Area2d" type="CollisionShape2D" parent="character/Area2D" groups=["Hit"]]
position = Vector2(212.75, -290.5)
shape = SubResource("RectangleShape2D_0u8j5")
disabled = true

[node name="Sprite2D" type="AnimatedSprite2D" parent="character/Area2D"]
texture_filter = 1
position = Vector2(116, -270)
scale = Vector2(0.961111, 1)
sprite_frames = SubResource("SpriteFrames_v2k83")
animation = &"attack"
autoplay = "idle"

[node name="Attack_Detector" type="Area2D" parent="character" groups=["Hit"]]
collision_layer = 16
collision_mask = 16

[node name="Attack_Detector_2d" type="CollisionShape2D" parent="character/Attack_Detector" groups=["Hit"]]
position = Vector2(211.75, -206)
shape = SubResource("RectangleShape2D_ce5v6")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.45
autostart = true

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="character/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="character/Attack_Detector" to="." method="_on_attack_detector_body_entered"]
[connection signal="body_exited" from="character/Attack_Detector" to="." method="_on_attack_detector_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
